--- a/index.html
+++ b/index.html
@@ -14,53 +14,58 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="title">
+    <header class="header">
       <div class="container">
-        <div class="h1-main">ASDFGVVCCSDSSSSSSSSSSSSSSSS</div>
-        <p></p>
-        <a href="#" class="btn"></a>
+        <div class="h1-main">Welcome</div>
       </div>
     </header>
     <main>
-      <section class="about">
-        <div class="container_ab">
-          <h2 class="about-headline">Menu</h2>
-          <div class="split">
+      <section class="Menu">
+        <div class="container">
+          <h2 class="section-title">Menu</h2>
+          <div class="divine">
             <a href="" class="options">
-              <img src="#" alt="" class="image" />
-              <p class="description"></p>
+              <img src="img/dish_1.jpg" alt="" class="image" />
             </a>
             <a href="" class="options">
-              <img src="#" alt="" class="image" />
-              <p class="description"></p>
+              <img src="img/dish_2.jpg" alt="" class="image" />
             </a>
             <a href="" class="options">
-              <img src="#" alt="" class="image" />
-              <p class="description"></p>
+              <img src="img/dish_3.jpg" alt="" class="image" />
             </a>
           </div>
         </div>
       </section>
       <section class="product">
         <div class="container">
-          <h2 class="products">Our Products</h2>
+          <h2 class="section-title">Our Products</h2>
           <article class="products">
             <h3 class="name"></h3>
-            <img src="img/dish_3.jpg" class="img-product" />
+            <img src="img/dish_4.jpg" class="img-product" />
             <a href="" class="description"></a>
-            <p class="btn"></p>
           </article>
           <article class="products">
             <img src="img/dish_1.jpg" class="img-product" />
             <h3 class="name"></h3>
             <a href="" class="description"></a>
-            <p class="btn"></p>
           </article>
           <article class="products">
             <img src="img/dish_2.jpg" class="img-product" />
             <h3 class="name"></h3>
             <a href="" class="description"></a>
-            <p class="btn"></p>
+          </article>
+        </div>
+      </section>
+      <section class="about">
+        <div class="container">
+          <article class="about-info">
+            <h2 class="section-title">Our history</h2>
+            <p class="adress">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus
+              ullam alias saepe delectus sequi placeat? Cupiditate eveniet hic
+              iusto reprehenderit quas consectetur cumque quidem commodi atque,
+              veritatis maxime at officia?
+            </p>
           </article>
         </div>
       </section>
