--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
           </article>
         </div>
       </section>
-      <section class="about">
+      <section class="contact">
         <div class="container">
           <article class="about-info">
-            <h2 class="section-title">Our history</h2>
+            <h2 class="section-title">Contact</h2>
             <p class="adress">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus
               ullam alias saepe delectus sequi placeat? Cupiditate eveniet hic
