--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@
           <article class="products">
             <h3 class="name"></h3>
             <img src="img/dish_4.jpg" class="img-product" />
-            <a href="" class="description"></a>
+            <p class="description">Dish description</p>
           </article>
           <article class="products">
             <img src="img/dish_1.jpg" class="img-product" />
             <h3 class="name"></h3>
-            <a href="" class="description"></a>
+            <p class="description">Dish description</p>
           </article>
           <article class="products">
             <img src="img/dish_2.jpg" class="img-product" />
             <h3 class="name"></h3>
-            <a href="" class="description"></a>
+            <p class="description">
+              Long Dish
+              description......................................................................
+            </p>
           </article>
         </div>
       </section>
