--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
         <div class="container">
           <h2 class="section-title">Our Products</h2>
           <article class="products">
-            <h3 class="name"></h3>
             <img src="img/dish_4.jpg" class="img-product" />
+            <h3 class="name">Dish Name</h3>
             <p class="description">Dish description</p>
           </article>
           <article class="products">
             <img src="img/dish_1.jpg" class="img-product" />
-            <h3 class="name"></h3>
+            <h3 class="name">Dish Name</h3>
             <p class="description">Dish description</p>
           </article>
           <article class="products">
             <img src="img/dish_2.jpg" class="img-product" />
-            <h3 class="name"></h3>
+            <h3 class="name">Dish Name</h3>
             <p class="description">
               Long Dish
               description......................................................................
